Make hash functions persistent
Make gb_hash an erlang application.
Add database module and gb_hash_register table.
Ensure registered hash functions available after each app start.

--- a/src/Makefile
+++ b/src/Makefile
@@ -11,7 +11,11 @@ APP_SRC= $(APP_FILE).src
 APP_TARGET= $(EBIN)/$(APP_FILE)
 
 MODULES = \
-	gb_hash
+	gb_hash \
+	gb_hash_db \
+	gb_hash_app \
+	gb_hash_sup \
+	gb_hash_server
 
 ERL_FILES = $(MODULES:%=%.erl)
 
