--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,8 @@
 {require_otp_vsn, "17"}.
 
-
-{erl_opts, [debug_info, warnings_as_errors]}.
+{erl_opts, [debug_info,
+	    %%warnings_as_errors,
+	    {i, "./include"},
+	    {i, "../gb_log/include"}]}.
 {eunit_opts, [verbose]}.
 
