Add rebar compatibility fixes
ignore .rebar folder
specify src_dirs in rebar.config
add gb_conf and gb_log app dependencies to app file

--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,7 @@
 {require_otp_vsn, "17"}.
 
-{erl_opts, [debug_info,
+{erl_opts, [{src_dirs, ["src", "test"]},
+	    debug_info,
 	    %%warnings_as_errors,
 	    {i, "./include"},
 	    {i, "../gb_log/include"}]}.
