Change build structure from Rebar 2.x to Rebar 3

--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,10 @@
 {erl_opts, [{src_dirs, ["src", "test"]},
 	    debug_info,
 	    %%warnings_as_errors,
-	    {i, "./include"},
-	    {i, "../gb_log/include"}]}.
+	    {i, "./include"}]}.
+
 {eunit_opts, [verbose]}.
 
+{deps, [
+    {gb_log, ".*", {git, "https://github.com/pundunlabs/gb_log.git",{branch, "master"}}}
+    ]}.
