--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,8 @@
-# ignore any file generated under ebin dirs
-ebin
+# ignore any files and folders generated under _build dir
+_build
 
 # igone beams generated anywhere
 *.beam
-
-# ignore dependencies folder
-deps
 
 #docs
 doc
@@ -37,6 +34,6 @@ erl_crash.dump
 # ignore common test logdir
 test/ct/log
 
-# ignore .rebar folder
-.rebar
+# ignore rebar.lock file
+rebar.lock
 
