Use gb_log tag: v1.0.0 as dependency.

--- a/rebar.config
+++ b/rebar.config
@@ -1,10 +1,9 @@
-{erl_opts, [{src_dirs, ["src", "test"]},
-	    debug_info,
+{erl_opts, [debug_info,
 	    %%warnings_as_errors,
 	    {i, "./include"}]}.
 
 {eunit_opts, [verbose]}.
 
 {deps, [
-    {gb_log, ".*", {git, "https://github.com/pundunlabs/gb_log.git",{branch, "master"}}}
+    {gb_log, ".*", {git, "https://github.com/pundunlabs/gb_log.git",{tag, "v1.0.0"}}}
     ]}.
