--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # ignore any files and folders generated under _build dir
 _build
+ebin
 
 # igone beams generated anywhere
 *.beam
@@ -36,4 +37,4 @@ test/ct/log
 
 # ignore rebar.lock file
 rebar.lock
-
+.rebar3
